[metadata]
name = ehlers
version = 0.0.0
author = Robert Christian
author_email = rm.rf.etc@gmail.com
description = Laguerre smoothing method by John F. Ehlers
url = https://github.com/rm-rf-etc/nplaguerre
keywords =
  numpy
  laguerre
classifiers =
  Development Status :: 2 - Pre-Alpha
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
license_files =
  MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
install_requires =
  numpy >= 1.16

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
